Code cleanup: Address forbidden API