@@ -344,14 +344,14 @@ public class XML {
             try {
                 char initial = string.charAt(0);
                 if (initial == '-' || (initial >= '0' && initial <= '9')) {
-                    Long value = new Long(string);
+                    Long value = Long.valueOf(string);
                     if (value.toString().equals(string) && noPrecisionLossForDouble(value)) {
                         return value;
                     }
                 }
             } catch (Exception ignore) {
                 try {
-                    Double value = new Double(string);
+                    Double value = Double.valueOf(string);
 
                     int dot = string.lastIndexOf('.');
                     String format = dot < 0 ? "%f" : ("%." + (string.length() - 1 - dot) + "f");
